--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/material-bottom-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "expo": "~41.0.1",
+    "expo-camera": "~11.0.2",
     "expo-status-bar": "~1.0.4",
     "firebase": "^8.6.7",
     "react": "16.13.1",
@@ -29,8 +30,8 @@
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
-    "redux-thunk": "^2.3.0"
-  
+    "redux-thunk": "^2.3.0",
+    "expo-image-picker": "~10.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
